--- a/angular.json
+++ b/angular.json
@@ -9,8 +9,12 @@
       "projectType": "application",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack-config.js",
+              "replaceDuplicatePlugins": true
+           },
             "preserveSymlinks": true,
             "outputPath": "dist",
             "index": "src/index.html",
@@ -55,7 +59,9 @@
               "echarts",
               "lodash",
               "zrender/lib/svg/svg",
-              "zrender/lib/vml/vml"
+              "zrender/lib/vml/vml",
+              "crypto",
+              "angular-slickgrid", "stream"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -90,7 +96,7 @@
           "defaultConfiguration": ""
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "ngx-admin-demo:build"
           },
