--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-admin",
-  "version": "10.0.0",
+  "version": "11.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -29,61 +29,68 @@
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
   },
   "dependencies": {
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "12.1.0",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/google-maps": "^12.2.13",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
+    "@angular-builders/custom-webpack": "^15.0.0",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
-    "@nebular/auth": "10.0.0",
-    "@nebular/eva-icons": "10.0.0",
-    "@nebular/security": "10.0.0",
-    "@nebular/theme": "10.0.0",
-    "@swimlane/ngx-charts": "^14.0.0",
+    "@nebular/auth": "11.0.1",
+    "@nebular/eva-icons": "11.0.1",
+    "@nebular/security": "11.0.1",
+    "@nebular/theme": "11.0.1",
+    "@swimlane/ngx-charts": "^20.4.1",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "crypto-browserify": "^3.12.0",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
+    "https-browserify": "^1.0.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
-    "ng2-ckeditor": "~1.2.9",
+    "ng2-ckeditor": "~1.3.7",
     "ng2-completer": "^9.0.1",
-    "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "normalize.css": "6.0.0",
+    "os-browserify": "^0.3.0",
     "pace-js": "1.0.2",
+    "path": "^0.12.7",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^1.3.0",
     "tinymce": "4.5.7",
     "tslib": "^2.3.1",
     "typeface-exo": "0.0.22",
+    "util": "^0.12.5",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular-eslint/builder": "14.4.0",
-    "@angular-eslint/eslint-plugin": "14.4.0",
-    "@angular-eslint/eslint-plugin-template": "14.4.0",
-    "@angular-eslint/schematics": "14.4.0",
-    "@angular-eslint/template-parser": "14.4.0",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "14.2.12",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular-eslint/builder": "15.0.0",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/schematics": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
+    "@angular/cli": "^15.0.0",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "15.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/d3-color": "1.0.5",
@@ -91,13 +98,17 @@
     "@types/jasminewd2": "2.0.3",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.12.70",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "1.3.4",
     "eslint": "^8.23.0",
+    "http2": "^3.3.7",
     "husky": "0.13.3",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.1",
@@ -110,8 +121,7 @@
     "rimraf": "2.6.1",
     "stylelint": "7.13.0",
     "ts-node": "3.2.2",
-    "tslint": "~6.1.0",
-    "tslint-language-service": "^0.9.9",
-    "typescript": "~4.6.4"
+    "tslint": "5.20.1",
+    "typescript": "4.8.2"
   }
 }
